# Report-approver

./: README.md  main.py  pyproject.toml
Rag/: rag.py  safe_claims_policy_rules_v2.txt
Rag/chroma_db/: chroma.sqlite3
client/: claim_state.py  orchestration.py  system_prompt.py
client/excel_read/: claims.xlsx  excel_read.py
excel_read/: Claims.xlsx  excel_read.py
models/: claim_input.py  claim_result.py  claim_validation.py
server/: models.py  queries.py  server.py
server/db/: insurance_engine.db  schema.sql
